--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -100,7 +100,9 @@ p {
 .event-image--full {
     width: 100%;
     padding-bottom: 1.5rem;
+    object-fit: cover;
     @include media-breakpoint-up(lg) { 
+        height: 30rem;
         width: 50rem;
         padding-bottom: 2rem;
     }
